# wordle_ray

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  main.c
docs/: improvements.md  roadmap.md
src/: constants.h  crossword_generator.c  game.c  game.c.old  game.h  main.c  render.c  render.h  systems.h  types.h  words.c  words.h
src/animation/: animation_system.c  animation_system.h  animation_triggers.c  animation_triggers.h  particle_system.c  particle_system.h
src/core/: state.c  state.h  validation.c  validation.h
src/crossword/: crossword_game.c  crossword_game.h  crossword_navigation.c  crossword_navigation.h
src/input/: input_manager.c  input_manager.h
src/ui/: camera.c  camera.h  view_manager.c  view_manager.h
src/wordle/: wordle_game.c  wordle_game.h
